@@ -4,6 +4,9 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/08/09
+	* Trade requests will now fail when either character is unable to act
+	  (character in storage, vending, interacting with an npc, petrified, etc)
+	  [Skotlex]
 	* Heard skotlex voice, changed all msg_table[] into msg_txt() in atcommand.c [Toms]
 2006/08/08
 	* Fixed the char-server not invoking the party_calc_state function when the
